# local_bangumi

./: .gitignore  README.md  docker-compose.yml
backend/: .env.example  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 33c55493ec25_initial_schema.py  512cd24e1346_add_person_relation.py  5e3c8f2a1b9d_add_user_record_fields.py
backend/app/: config.py  database.py  main.py
backend/app/api/: characters.py  episodes.py  persons.py  records.py  relations.py  search.py  subjects.py  sync.py
backend/app/models/: __init__.py  character.py  episode.py  person.py  person_character.py  person_relation.py  subject.py  subject_character.py  subject_person.py  subject_relation.py  user_record.py
backend/app/scheduler/: sync_scheduler.py
backend/app/schemas/: __init__.py  character.py  episode.py  person.py  subject.py  user_record.py
backend/app/services/: data_import.py  data_sync.py
backend/app/utils/: exception_handlers.py  github_fetcher.py  infobox_parser.py  logging_config.py  parser.py
backend/tests/: conftest.py  test_api_other.py  test_api_records.py  test_api_subjects.py
data/: sync_state.json
frontend/: package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  main.js
frontend/src/api/: characters.js  episodes.js  persons.js  records.js  request.js  search.js  subjects.js  sync.js
frontend/src/components/: CharacterGrid.vue  EpisodeList.vue  InfoboxDisplay.vue  RatingInput.vue  ScoreDisplay.vue  StaffList.vue  StatusBadge.vue  SubjectCard.vue  (+1 more)
scripts/: init_db.py  sync_data.py
(+10 files in other folders)
